Make TermSelector.match static method